# raymarch

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: camera.h  object3d.h  scene.h  shape.h  simulation.h  texture.h
include/sample_scenes/: helix.h  lighting.h  moving-torus.h
src/: camera.h  light.h  object3d.cpp  object3d.h  option.h  scene.h  shape.h  simulation.cpp  simulation.h  simulation_option.h
src/materials/: material.h  phong_material.h  solid_material.h
src/sample_scenes/: helix.h  lighting.h  material_test.h  moving-torus.h
